@@ -13,6 +13,7 @@ cgrates (1.0) UNRELEASED; urgency=medium
   * [RSRParsers] Added *len dataconverter   
   * [ERs] Added *natsJSONMap
   * [EEs] Added *natsJSONMap
+  * [RSRParsers] Added *slice dataconverter  
   
  -- DanB <danb@cgrates.org>  Thu, 4 May 2021 12:05:00 +0200
 
